20200306 / JHRla019 / Git 사용법 추가